--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -21,8 +21,8 @@ jobs:
 
       - name: Build project
         run: npm run build
-
   deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       steps:
