--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,6 +40,15 @@ jobs:
           path: 'build'
           if-no-files-found: error
 
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: 'github-pages'
+          path: '.'
+
+      - name: Unzip artifact
+        run: unzip ./github-pages.zip -d ./build
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
