--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,6 +33,18 @@ jobs:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
       steps:
+        - name: Download artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: 'github-pages'
+            path: './'
+            
+        - name: log files
+          run: ls
+  
+        - name: Unzip artifact
+          run: unzip ./github-pages.zip -d ./build
+          
         - name: Upload artifact
           id: upload-artifact
           uses: actions/upload-artifact@v4
