--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: "Deploy to github pages"
 on:
   push: 
-    branches: ['main']
+    branches: ['main', 'deployment-flow']
 
 permissions:
   contents: read
@@ -26,6 +26,14 @@ jobs:
       - name: Build project
         run: npm run build
         
+      - name: Upload artifact
+          id: upload-artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: 'github-pages'
+            path: 'build'
+            if-no-files-found: error
+
   deploy:
       needs: build
       runs-on: ubuntu-latest
@@ -44,14 +52,6 @@ jobs:
   
         - name: Unzip artifact
           run: unzip ./github-pages.zip -d ./build
-          
-        - name: Upload artifact
-          id: upload-artifact
-          uses: actions/upload-artifact@v4
-          with:
-            name: 'github-pages'
-            path: 'build'
-            if-no-files-found: error
   
         - name: Deploy to GitHub Pages
           id: deployment
