fix: remove download artifact

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,21 +40,19 @@ jobs:
       environment:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
-      steps:
-        - name: Download artifact
-          uses: actions/download-artifact@v4
-          with:
-            name: 'github-pages'
-            path: './'
+      # steps:
+      #   - name: Download artifact
+      #     uses: actions/download-artifact@v4
+      #     with:
+      #       name: 'github-pages'
+      #       path: './'
             
         - name: log files
           run: ls
   
-        - name: Unzip artifact
-          run: unzip ./github-pages.zip -d ./build
+        # - name: Unzip artifact
+        #   run: unzip ./github-pages.zip -d ./build
   
         - name: Deploy to GitHub Pages
           id: deployment
           uses: actions/deploy-pages@v4
-          with:
-            folder: 'build'
