--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -40,7 +40,7 @@ jobs:
       environment:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
-      # steps:
+      steps:
       #   - name: Download artifact
       #     uses: actions/download-artifact@v4
       #     with:
