fix: download artifacts

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,17 +41,14 @@ jobs:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
       steps:
-      #   - name: Download artifact
-      #     uses: actions/download-artifact@v4
-      #     with:
-      #       name: 'github-pages'
-      #       path: './'
+        - name: Download artifact
+          uses: actions/download-artifact@v4
+          with:
+            name: 'github-pages'
+            path: './'
             
         - name: log files
           run: ls
-  
-        # - name: Unzip artifact
-        #   run: unzip ./github-pages.zip -d ./build
   
         - name: Deploy to GitHub Pages
           id: deployment
