--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,6 +19,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+          
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
       
       - name: Install dependencies
         run: npm i
@@ -41,15 +44,6 @@ jobs:
         name: github-pages
         url: ${{ steps.deployment.outputs.page_url }}
       steps:
-        - name: Download artifact
-          uses: actions/download-artifact@v4
-          with:
-            name: 'github-pages'
-            path: './'
-            
-        - name: log files
-          run: ls
-  
         - name: Deploy to GitHub Pages
           id: deployment
           uses: actions/deploy-pages@v4
