--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,7 +1,7 @@
 name: "Deploy to github pages"
 on:
   push: 
-    branches: ['main', 'feat/firebase']
+    branches: ['main']
 
 jobs: 
   build-and-deploy:
